--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,12 @@ include(${wxWidgets_USE_FILE})
 add_executable(wxwidgets_clion_project
         MyApp.cpp
         GameFrame.cpp
-        GamePanel.cpp)
+        GamePanel.cpp
+        Snake.cpp
+        Snake.h
+        Config.h
+        CellType.h
+        Snake.cpp
+        Direction.h)
 
 target_link_libraries(wxwidgets_clion_project ${wxWidgets_LIBRARIES})
