feat: snake move, wall

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,8 @@ add_executable(wxwidgets_clion_project
         Config.h
         CellType.h
         Snake.cpp
-        Direction.h)
+        Direction.h
+        Wall.h
+        Wall.cpp)
 
 target_link_libraries(wxwidgets_clion_project ${wxWidgets_LIBRARIES})
